@@ -5,22 +5,24 @@
 
     <groupId>com.paypal.selion</groupId>
     <artifactId>SeLion-Parent</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>SeLion Parent POM</name>
     <description>The SeLion Parent POM</description>
     <url>http://selion.io</url>
 
     <properties>
-        <compileSource>1.7</compileSource>
+        <compileSource>1.8</compileSource>
         <skipTests>false</skipTests>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <selenium.version>2.48.2</selenium.version>
+        <selenium.version>3.7.1</selenium.version>
         <iosdriver.version>0.6.5</iosdriver.version>
         <selendroid.version>0.17.0</selendroid.version>
-        <appium.version>3.2.0</appium.version>
-        <testng.version>6.9.6</testng.version>
+        <appium.version>5.0.0-BETA6</appium.version>
+        <testng.version>6.9.10</testng.version>
         <snakeyaml.version>1.15</snakeyaml.version>
+        <htmlunit.version>2.27</htmlunit.version>
+        <htmlunitdriver.version>2.27</htmlunitdriver.version>
         <project.bom.version>${project.version}</project.bom.version>
     </properties>
 
@@ -30,7 +32,11 @@
         <module>dataproviders</module>
         <module>server</module>
         <module>client</module>
+        <module>appium-provider</module>
+        <module>iosdriver-provider</module>
+        <module>selendroid-provider</module>
         <module>codegen</module>
+        <module>codegen-maven</module>
         <module>archetype</module>
     </modules>
 
@@ -159,39 +165,17 @@
     <build>
         <pluginManagement>
             <plugins>
-                <!-- this plugin is a maven plugin designed to hold meta data to communicate with eclipse m2e plugin when 
-                    it processes a maven pom.xml. Without this, children of this pom file will get the warning 
-                    "maven-enforcer-plugin (goal enforce) is ignored by m2e" because there is no connector that tells 
-                    m2e how to integrate the maven plugin into eclipse. -->
+                <!-- required to force maven to use a lambda (java 8) compatible version of this artifact -->
                 <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-enforcer-plugin</artifactId>
-                                        <versionRange>[1.0.0,)</versionRange>
-                                        <goals>
-                                            <goal>enforce</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>3.5</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.6.1</version>
                     <configuration>
                         <source>${compileSource}</source>
                         <target>${compileSource}</target>
@@ -205,7 +189,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.2.1</version>
+                    <version>3.0.1</version>
                     <executions>
                         <execution>
                             <phase>package</phase>
@@ -219,14 +203,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.1</version>
+                    <version>2.10.4</version>
                     <configuration>
                         <minmemory>128m</minmemory>
                         <maxmemory>512</maxmemory>
                         <source>${compileSource}</source>
                         <overview>${basedir}/src/main/resources/overview.html</overview>
                         <links>
-                            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+                            <link>http://docs.oracle.com/javase/8/docs/api/</link>
                         </links>
                         <additionalparam>${javadoc.opts}</additionalparam>
                     </configuration>
@@ -243,12 +227,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>2.20</version>
                     <configuration>
                         <includes>
                             <include>**/*Test*.java</include>
                         </includes>
-                        <argLine>-XX:MaxPermSize=128m -XX:-UseSplitVerifier</argLine>
                     </configuration>
                 </plugin>
 
@@ -261,7 +244,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4</version>
+                    <version>1.4.1</version>
                     <executions>
                         <execution>
                             <id>enforce-versions</id>
@@ -271,10 +254,10 @@
                             <configuration>
                                 <rules>
                                     <requireMavenVersion>
-                                        <version>[3.0,)</version>
+                                        <version>[3.2,)</version>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>1.7</version>
+                                        <version>1.8</version>
                                     </requireJavaVersion>
                                     <requireReleaseDeps>
                                         <onlyWhenRelease>true</onlyWhenRelease>
@@ -340,7 +323,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.19.1</version>
                 <reportSets>
                     <reportSet>
                         <reports>
